"more few more little changes"

--- a/signup.html
+++ b/signup.html
@@ -77,5 +77,6 @@
         <p class="mt-5 mb-3 text-body-secondary">&copy; Dheeraj - 2023</p>
       </form>
     </main>
+    <script type="text/javascript" src="config.js"></script>
   </body>
 </html>
